After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 734623 - facedetect: fix NULL error when disable eyes/nose/mouth
facedetect: fix NULL error when disable eyes/nose/mouth
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other All
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-08-11 15:54 UTC by valx76
Modified: 2014-08-13 15:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
disable eyes/nose/mouth recognition (1.35 KB, patch)
2014-08-11 15:54 UTC, valx76
none Details | Review
patch with git format (1.11 KB, patch)
2014-08-11 18:28 UTC, valx76
needs-work Details | Review
follows thiagoss advices (471 bytes, patch)
2014-08-11 19:32 UTC, valx76
needs-work Details | Review
complete git format-patch (843 bytes, patch)
2014-08-13 15:13 UTC, valx76
committed Details | Review

Description valx76 2014-08-11 15:54:55 UTC
Created attachment 283121 [details] [review]
disable eyes/nose/mouth recognition

With that patch, we can now disable the eyes/nose/mouth recognition by setting their profiles to NULL.


# Example

- To enable the nose recognition :
#define DEFAULT_NOSE_PROFILE HAAR_CASCADES_DIR "haarcascade_mcs_nose.xml"

- To disable it :
#define DEFAULT_NOSE_PROFILE NULL
Comment 1 Thiago Sousa Santos 2014-08-11 18:21:15 UTC
Could you please submit the patch with git format-patch format? This format doesn't apply with git.
Comment 2 valx76 2014-08-11 18:28:20 UTC
Created attachment 283128 [details] [review]
patch with git format
Comment 3 Thiago Sousa Santos 2014-08-11 19:10:36 UTC
Review of attachment 283128 [details] [review]:

I would prefer this to be handled directly in the _load_profile function. Just check for NULL there and return NULL in that case.

Additionally your patch seems to be agains gstfacedetect_orig.c, not against gstfacedetect.c
Comment 4 valx76 2014-08-11 19:32:28 UTC
Created attachment 283132 [details] [review]
follows thiagoss advices
Comment 5 Sebastian Dröge (slomo) 2014-08-13 14:36:06 UTC
Comment on attachment 283132 [details] [review]
follows thiagoss advices

Please attach this in "git format-patch" format with a commit message, your name and mail address
Comment 6 valx76 2014-08-13 15:13:41 UTC
Created attachment 283293 [details] [review]
complete git format-patch
Comment 7 Thiago Sousa Santos 2014-08-13 15:33:10 UTC
Thanks for the patch, but please notice how gstreamer developers use the commit message, as I fixed that below.

commit 03b70aecec02b417cc67c88639a05f771acdc317
Author: Valentin PONS <valx76@gmail.com>
Date:   Wed Aug 13 16:57:15 2014 +0200

    facedetect: Use NULL to disable eyes/nose/mouth
    
    Without printing a warning about it
    
    https://bugzilla.gnome.org/show_bug.cgi?id=734623



Put something like:

elementname: short description

long description

(bug number, if available)
Comment 8 Thiago Sousa Santos 2014-08-13 15:33:32 UTC
Comment on attachment 283293 [details] [review]
complete git format-patch

with an improved commit message