facedetect: Use NULL to disable eyes/nose/mouth

Without printing a warning about it

https://bugzilla.gnome.org/show_bug.cgi?id=734623